--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,17 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+*.gitignore
+*/*.gitignore
+/.idea
+*/.idea/*
+*/mvnw
+*/*/mvnw
+*/mvnw.cmd
+*/*/mvnw.cmd
+*/*/.mvn/*
+*/.mvn/*
+*.iml
+*/*.iml
+
