--- a/ribbon/consumer-restTemplate/pom.xml
+++ b/ribbon/consumer-restTemplate/pom.xml
@@ -2,7 +2,6 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-
     <parent>
         <groupId>com.example.springcloud</groupId>
         <artifactId>ribbon</artifactId>
@@ -10,9 +9,9 @@
     </parent>
 
     <groupId>com.example.springcloud.ribbon</groupId>
-    <artifactId>hello-service</artifactId>
+    <artifactId>consumer-restTemplate</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>hello-service</name>
+    <name>consumer-restTemplate</name>
 
     <dependencies>
         <dependency>
@@ -23,10 +22,10 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-ribbon</artifactId>
+        </dependency>
     </dependencies>
-
-    <build>
-        <finalName>hello-service</finalName>
-    </build>
 
 </project>
