--- a/ribbon/consumer-feign/src/main/resources/application.properties
+++ b/ribbon/consumer-feign/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+server.port=9102
+spring.application.name=consumer-feign
+# eureka≈‰÷√
+eureka.client.serviceUrl.defaultZone=http://peer1:8001/eureka/,http://peer2:8002/eureka/
 
+# log≈‰÷√
+logging.level.com.netflix=info
+logging.level.org.springframework.cloud=info
