--- a/ribbon/consumer-restTemplate/src/main/resources/application.properties
+++ b/ribbon/consumer-restTemplate/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=9101
-spring.application.name=ribbon-consumer
+spring.application.name=consumer-restTemplate
 # eureka≈‰÷√
 eureka.client.serviceUrl.defaultZone=http://peer1:8001/eureka/,http://peer2:8002/eureka/
 
