--- a/hello-service/pom.xml
+++ b/hello-service/pom.xml
@@ -9,9 +9,16 @@
         <version>0.0.1-SNAPSHOT</version>
     </parent>
 
-    <groupId>com.example.springcloud</groupId>
-    <artifactId>eureka</artifactId>
+    <groupId>com.example.springcloud.ribbon</groupId>
+    <artifactId>hello-service</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>eureka</name>
+    <name>hello-service</name>
+
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+    </dependencies>
 
 </project>
