--- a/hystrix/src/main/resources/application.properties
+++ b/hystrix/src/main/resources/application.properties
@@ -1,3 +1,3 @@
-server.port=9001
-spring.application.name=hello-service
+server.port=8003
+spring.application.name=hystrix
 eureka.client.serviceUrl.defaultZone=http://127.0.0.1:8000/eureka/
