--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <module>eureka</module>
         <module>hello-service</module>
         <module>ribbon</module>
+        <module>feign-client</module>
     </modules>
 
     <properties>
