--- a/ribbon/feign/pom.xml
+++ b/ribbon/feign/pom.xml
@@ -16,8 +16,9 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-openfeign</artifactId>
+            <groupId>com.example.springcloud</groupId>
+            <artifactId>feignclient</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
         </dependency>
     </dependencies>
 
