--- a/ribbon/feign/src/main/resources/application.properties
+++ b/ribbon/feign/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 server.port=8002
 spring.application.name=feign
-eureka.client.serviceUrl.defaultZone=http://127.0.0.1:8000/eureka/
+eureka.client.serviceUrl.defaultZone=http://127.0.0.1:8761/eureka/
+
+logging.level.com.example.springcloud=debug
