--- a/hello-service/src/main/resources/application.properties
+++ b/hello-service/src/main/resources/application.properties
@@ -1,3 +1,3 @@
 server.port=9001
 spring.application.name=hello-service
-eureka.client.serviceUrl.defaultZone=http://127.0.0.1:8000/eureka/
+eureka.client.serviceUrl.defaultZone=http://127.0.0.1:8761/eureka
