--- a/hystrix/src/main/resources/application.properties
+++ b/hystrix/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 server.port=8003
 spring.application.name=hystrix
 eureka.client.serviceUrl.defaultZone=http://127.0.0.1:8761/eureka/
+
+logging.level.com.example.springcloud=debug
