1. hystrix熔断器引入 2. 其它优化 3. 命令模式demo

--- a/eureka/src/main/resources/application.properties
+++ b/eureka/src/main/resources/application.properties
@@ -4,4 +4,5 @@ eureka.instance.hostname=127.0.0.1
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
 eureka.client.service-url.defaultZone=http://${eureka.instance.hostname}:${server.port}/eureka
+## \u5173\u95EDeureka\u81EA\u6211\u4FDD\u62A4\uFF0C\u8C03\u8BD5\u65F6\u4F7F\u7528
 eureka.server.enable-self-preservation=false
