--- a/ribbon/rest-template/pom.xml
+++ b/ribbon/rest-template/pom.xml
@@ -12,5 +12,6 @@
     <artifactId>rest-template</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>rest-template</name>
+    <packaging>jar</packaging>
 
 </project>
