--- a/hystrix/pom.xml
+++ b/hystrix/pom.xml
@@ -15,20 +15,13 @@
     <name>hystrix</name>
 
     <dependencies>
+        <!-- local repository -->
         <dependency>
             <groupId>com.example.springcloud</groupId>
             <artifactId>feign-client</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
 
-        <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-netflix-ribbon</artifactId>
-        </dependency>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-hystrix</artifactId>
