--- a/ribbon/ribbon-feign/pom.xml
+++ b/ribbon/ribbon-feign/pom.xml
@@ -1,26 +1,26 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>com.example</groupId>
-        <artifactId>springcloud</artifactId>
+        <groupId>com.example.springcloud</groupId>
+        <artifactId>ribbon</artifactId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
 
-    <groupId>com.example.springcloud</groupId>
-    <artifactId>hello-service</artifactId>
+    <groupId>com.example.springcloud.ribbon</groupId>
+    <artifactId>ribbon-feign</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>hello-service</name>
+    <name>ribbon-feign</name>
+    <packaging>jar</packaging>
 
     <dependencies>
         <!-- local repository -->
         <dependency>
             <groupId>com.example.springcloud</groupId>
-            <artifactId>service-api</artifactId>
+            <artifactId>feign-client</artifactId>
             <version>0.0.1-SNAPSHOT</version>
-            <scope>compile</scope>
         </dependency>
     </dependencies>
 
