--- a/service-api/pom.xml
+++ b/service-api/pom.xml
@@ -13,4 +13,11 @@
     <artifactId>service-api</artifactId>
     <packaging>jar</packaging>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-openfeign</artifactId>
+        </dependency>
+    </dependencies>
+
 </project>
