--- a/feign/src/main/resources/application.properties
+++ b/feign/src/main/resources/application.properties
@@ -3,3 +3,29 @@ spring.application.name=feign
 eureka.client.serviceUrl.defaultZone=http://127.0.0.1:8761/eureka/
 
 logging.level.com.example.springcloud=debug
+
+# Ribbon \u5168\u5C40\u914D\u7F6E
+ribbon.ConnectTimeout=500
+ribbon.readTimeout=5000
+# \u6307\u5B9A\u670D\u52A1\u914D\u7F6E
+HELLO-SERVICE.ribbon.ConnectTimeout=500
+HELLO-SERVICE.ribbon.readTimeout=500
+HELLO-SERVICE.ribbon.OkToRetryOnAllOperations=true
+## \u6700\u5927\u66F4\u6362\u5B9E\u4F8B\u8BBF\u95EE\u6B21\u6570\uFF0C\u4F1A\u66F4\u63622\u6B21\u5B9E\u4F8B\u8FDB\u884C\u91CD\u8BD5
+HELLO-SERVICE.ribbon.MaxAutoRetryNextServer=2
+## \u6700\u5927\u91CD\u8BD5\u7B56\u7565\u8BBF\u95EE\u9996\u9009\u5B9E\u4F8B\u5931\u8D25\u6B21\u6570\uFF0C\u5931\u8D251\u6B21\u540E\u624D\u66F4\u6362\u5B9E\u4F8B\u8BBF\u95EE
+HELLO-SERVICE.ribbon.MaxAutoRetrys=1
+
+# Hystrix \u5168\u5C40\u914D\u7F6E\uFF08\u9ED8\u8BA4true\uFF09
+feign.hystrix.enabled=true
+##feign.hystrix.enabled=false                               ## \u5173\u95EDHystrix\u529F\u80FD
+##hystrix.command.default.execution.timeout.enable=false    ## \u5173\u95EDHystrix\u529F\u80FD
+hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=5000
+## \u6307\u5B9A\u547D\u4EE4\u914D\u7F6E\uFF08/hello \u63A5\u53E3\uFF09
+hystrix.command.hello.default.execution.isolation.thread.timeoutInMilliseconds=5000
+
+# Feign\u8BF7\u6C42/\u54CD\u5E94GZIP\u538B\u7F29
+feign.compression.request.enabled=true
+feign.compression.request.min-request-size=2048
+feign.compression.response.enabled=true
+
