--- a/hystrix/pom.xml
+++ b/hystrix/pom.xml
@@ -18,7 +18,7 @@
         <!-- local repository -->
         <dependency>
             <groupId>com.example.springcloud</groupId>
-            <artifactId>feign-client</artifactId>
+            <artifactId>service-api</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
 
