--- a/ribbon/pom.xml
+++ b/ribbon/pom.xml
@@ -16,6 +16,13 @@
     <packaging>pom</packaging>
 
     <dependencies>
+        <!-- local repository -->
+        <dependency>
+            <groupId>com.example.springcloud</groupId>
+            <artifactId>service-api</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
