--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
     <modules>
         <module>eureka</module>
         <module>hello-service</module>
-        <module>service-api</module>
+        <module>api</module>
         <module>ribbon</module>
         <module>hystrix</module>
         <module>feign</module>
