--- a/hystrix/pom.xml
+++ b/hystrix/pom.xml
@@ -12,13 +12,13 @@
     <groupId>com.example.springcloud</groupId>
     <artifactId>hystrix</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>hystrix</name>
+    <packaging>war</packaging>
 
     <dependencies>
         <!-- local repository -->
         <dependency>
             <groupId>com.example.springcloud</groupId>
-            <artifactId>service-api</artifactId>
+            <artifactId>api</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
 
