--- a/ribbon/pom.xml
+++ b/ribbon/pom.xml
@@ -18,7 +18,7 @@
         <!-- local repository -->
         <dependency>
             <groupId>com.example.springcloud</groupId>
-            <artifactId>service-api</artifactId>
+            <artifactId>api</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
 
