--- a/ribbon/rest-template/pom.xml
+++ b/ribbon/rest-template/pom.xml
@@ -2,6 +2,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+
     <parent>
         <groupId>com.example.springcloud</groupId>
         <artifactId>ribbon</artifactId>
@@ -11,6 +12,6 @@
     <groupId>com.example.springcloud.ribbon</groupId>
     <artifactId>rest-template</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <packaging>jar</packaging>
+    <packaging>war</packaging>
 
 </project>
