--- a/ribbon/ribbon-feign/pom.xml
+++ b/ribbon/ribbon-feign/pom.xml
@@ -12,6 +12,6 @@
     <groupId>com.example.springcloud.ribbon</groupId>
     <artifactId>ribbon-feign</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <packaging>jar</packaging>
+    <packaging>war</packaging>
 
 </project>
