--- a/hello-service/pom.xml
+++ b/hello-service/pom.xml
@@ -12,7 +12,7 @@
     <groupId>com.example.springcloud</groupId>
     <artifactId>hello-service</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <packaging>jar</packaging>
+    <packaging>war</packaging>
 
     <dependencies>
         <!-- local repository -->
@@ -20,7 +20,11 @@
             <groupId>com.example.springcloud</groupId>
             <artifactId>api</artifactId>
             <version>0.0.1-SNAPSHOT</version>
-            <scope>compile</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
     </dependencies>
 
