--- a/feign/src/main/resources/application.properties
+++ b/feign/src/main/resources/application.properties
@@ -3,6 +3,7 @@ spring.application.name=feign
 eureka.client.serviceUrl.defaultZone=http://127.0.0.1:8761/eureka/
 
 logging.level.com.example.springcloud=debug
+logging.level.org.springframework.cloud.openfeign=debug
 
 # Ribbon \u5168\u5C40\u914D\u7F6E
 ribbon.ConnectTimeout=500
